integration-testing/k8/k8.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: integration-testing
  labels:
    app: integration-testing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: integration-testing
  template:
    metadata:
      labels:
        app: integration-testing
    spec:
      containers:
      - name: integration-testing
        image: registry.cloud.sdu.dk/sdu-cloud/integration-testing-service:0.1.0
        command:
        - /opt/service/bin/service
        - --config-dir
        - /etc/refresh-token
        - --config-dir
        - /etc/token-validation
        volumeMounts:
        - mountPath: /etc/refresh-token
          name: refresh-token
        - mountPath: /etc/token-validation
          name: token-validation
      volumes:
      - name: refresh-token
        secret:
          optional: false
          secretName: integration-testing-refresh-token
      - name: token-validation
        configMap:
          name: token-validation

      imagePullSecrets:
        - name: esci-docker

---
apiVersion: v1
kind: Service
metadata:
  name: integration-testing
spec:
  clusterIP: None
  type: ClusterIP
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: integration-testing-service
